--- a/index.html
+++ b/index.html
@@ -1,11 +1,91 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="th">
+<head>
+    <meta charset="UTF-8">
+    <title>ร้านเครื่องสำอาง BeautyGlow</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            text-align: center;
+            background-color: #f9f6f7;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #e91e63;
+            color: white;
+            padding: 20px 0;
+        }
+        .products {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+            padding: 30px;
+        }
+        .product {
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0px 2px 8px rgba(0,0,0,0.2);
+            padding: 10px;
+            width: 200px;
+        }
+        .product img {
+            width: 100%;
+            border-radius: 10px;
+        }
+        .ad-banner {
+            margin: 40px 0;
+            font-size: 1.3em;
+            color: #e91e63;
+            font-weight: bold;
+        }
+        .presenter {
+            margin: 40px 0;
+        }
+        footer {
+            background-color: #eee;
+            padding: 20px;
+        }
+        footer img {
+            height: 60px;
+        }
+    </style>
+</head>
 <body>
+    <header>
+        <h1>BeautyGlow เครื่องสำอางเพื่อผิวสวยสดใส</h1>
+    </header>
 
-<h1>Your Name Here</h1>
-น่ารัก
-<h2> Your student code here</h2>
+    <div class="products">
+        <div class="product">
+            <img src="https://example.com/lipstick.jpg" alt="ลิปสติก">
+            <h3>ลิปสติกชมพูแซ่บ</h3>
+            <p>฿350</p>
+        </div>
+        <div class="product">
+            <img src="https://example.com/foundation.jpg" alt="รองพื้น">
+            <h3>รองพื้นเนียนใส</h3>
+            <p>฿490</p>
+        </div>
+        <div class="product">
+            <img src="https://example.com/eyeshadow.jpg" alt="อายแชโดว์">
+            <h3>อายแชโดว์สีธรรมชาติ</h3>
+            <p>฿280</p>
+        </div>
+    </div>
 
+    <div class="ad-banner">
+        ✨ โปรโมชั่นลด 20% ทั้งร้าน! ✨
+    </div>
+
+    <div class="presenter">
+        <img src="https://example.com/jackson-wang.jpg" alt="Jackson Wang" width="200">
+        <p>แอมบาสเดอร์ของเรา: <strong>Jackson Wang</strong></p>
+    </div>
+
+    <footer>
+        <img src="https://example.com/logo.png" alt="โลโก้ BeautyGlow">
+        <p>&copy; 2025 BeautyGlow Thailand</p>
+    </footer>
 </body>
-
 </html>
