--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
 
     <div class="products">
         <div class="product">
-            <img src="https://example.com/lipstick.jpg" alt="ลิปสติก">
+            <img src="lipstick.jpg" alt="ลิปสติก">
             <h3>ลิปสติกชมพูแซ่บ</h3>
             <p>฿350</p>
         </div>
         <div class="product">
-            <img src="https://example.com/foundation.jpg" alt="รองพื้น">
+            <img src="foundation.jpg" alt="รองพื้น">
             <h3>รองพื้นเนียนใส</h3>
             <p>฿490</p>
         </div>
         <div class="product">
-            <img src="https://example.com/eyeshadow.jpg" alt="อายแชโดว์">
+            <img src="eyeshadow.jpg" alt="อายแชโดว์">
             <h3>อายแชโดว์สีธรรมชาติ</h3>
             <p>฿280</p>
         </div>
